# bare-metal-manager-core

crates/admin-cli/: Cargo.toml
crates/admin-cli/src/: rpc.rs
crates/admin-cli/src/bmc_machine/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/boot_override/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/cfg/: cli_options.rs  dispatch.rs
crates/admin-cli/src/credential/: args.rs  cmds.rs  common.rs  mod.rs  tests.rs
crates/admin-cli/src/debug_bundle/: cmds.rs
crates/admin-cli/src/devenv/: mod.rs  tests.rs
crates/admin-cli/src/domain/: mod.rs  tests.rs
crates/admin-cli/src/dpa/: mod.rs  tests.rs
crates/admin-cli/src/dpf/: cmds.rs  common.rs  mod.rs
crates/admin-cli/src/dpu/: mod.rs  tests.rs
crates/admin-cli/src/dpu_remediation/: mod.rs  tests.rs
crates/admin-cli/src/expected_machines/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/expected_power_shelf/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/expected_switch/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/extension_service/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/firmware/: mod.rs  start_updates.rs  tests.rs
crates/admin-cli/src/generate_shell_complete/: mod.rs
crates/admin-cli/src/host/: mod.rs  tests.rs
crates/admin-cli/src/ib_partition/: cmds.rs  mod.rs  tests.rs
crates/admin-cli/src/instance/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/instance_type/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/inventory/: mod.rs
crates/admin-cli/src/ip/: mod.rs  tests.rs
crates/admin-cli/src/jump/: cmds.rs  mod.rs
crates/admin-cli/src/machine/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/machine_interfaces/: mod.rs  tests.rs
crates/admin-cli/src/machine_validation/: mod.rs  tests.rs
crates/admin-cli/src/managed_host/: mod.rs  tests.rs
crates/admin-cli/src/network_devices/: mod.rs  tests.rs
crates/admin-cli/src/network_security_group/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/network_segment/: mod.rs  tests.rs
crates/admin-cli/src/nvl_logical_partition/: mod.rs  tests.rs
crates/admin-cli/src/nvl_partition/: mod.rs  tests.rs
crates/admin-cli/src/os_image/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/power_shelf/: mod.rs  tests.rs
crates/admin-cli/src/rack/: mod.rs  tests.rs
crates/admin-cli/src/rack_firmware/: mod.rs  tests.rs
crates/admin-cli/src/resource_pool/: mod.rs  tests.rs
crates/admin-cli/src/route_server/: common.rs  mod.rs  tests.rs
crates/admin-cli/src/set/: mod.rs  tests.rs
crates/admin-cli/src/site_explorer/: common.rs  mod.rs  tests.rs
crates/dpf-beta/: .dockerignore  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
crates/dpf-beta/crds/: apiextensions.k8s.io_v1_customresourcedefinition_bfbs.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpfoperatorconfigs.operator.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuclusters.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpudeployments.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpudevices.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpudiscoveries.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuflavors.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpunodemaintenances.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpunodes.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpus.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuservicechains.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuserviceconfigurations.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuservicecredentialrequests.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuserviceinterfaces.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuserviceipams.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuservicenads.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuservices.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuservicetemplates.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpusets.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpustoragepolicies.storage.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpustoragevendors.storage.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuvirtualnetworks.vpc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuvolumeattachments.storage.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuvolumes.storage.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuvpcs.vpc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_isolationclasses.vpc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_servicechains.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_servicechainsets.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_serviceinterfaces.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_serviceinterfacesets.svc.dpu.nvidia.com.yaml
crates/dpf-beta/dev/: Dockerfile.carbide-dpf-api-harness-glibc2.34  build-carbide-dpf-api-harness-glibc2.34.sh
crates/dpf-beta/src/: error.rs  flavor.rs  lib.rs  sdk.rs  services.rs  types.rs  watcher.rs
crates/health/: Cargo.toml
crates/health/benches/: collector_pipeline.rs  processor_pipeline.rs  sink_pipeline.rs
crates/health/example/: config.example.toml
crates/health/src/: api_client.rs  config.rs  discovery.rs  firmware_collector.rs  lib.rs  logs_collector.rs  monitor.rs  nmxt_collector.rs  sharding.rs
crates/nras/: Cargo.toml
crates/nras/examples/: nras_gpu.rs
crates/nras/src/: lib.rs
(+671 files in other folders)
