#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-admin-cli"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
# TODO: rename to carbide-admin-cli
name = "carbide-admin-cli"
path = "src/main.rs"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
bmc-vendor = { path = "../bmc-vendor" }
carbide-macros = { path = "../macros" }
carbide-network = { path = "../network" }
carbide-ssh = { path = "../ssh" }
carbide-tls = { path = "../tls" }
carbide-uuid = { path = "../uuid" }
carbide-version = { path = "../version" }
carbide-secrets = { path = "../secrets" }
carbide-health-report = { path = "../health-report" }
carbide-measured-boot = { path = "../measured-boot", features = ["cli"] }
carbide-libmlx = { path = "../libmlx" }
carbide-rpc = { path = "../rpc", features = ["cli"] }
carbide-utils = { path = "../utils" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
color-eyre = { workspace = true }
csv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
ipnet = { workspace = true }
libredfish = { workspace = true }
librms = { workspace = true }
mac_address = { workspace = true }
prettytable-rs = { workspace = true }
reqwest = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = [
  "env-filter",
  "local-time",
], workspace = true }
urlencoding = { workspace = true }
version-compare = { workspace = true }
uuid = { workspace = true }
x509-parser = { features = ["validate"], workspace = true }
zip = { workspace = true }

[build-dependencies]
clap = { workspace = true }
carbide-version = { path = "../version" }

[lints]
workspace = true
