[package]
name = "carbide-dpf-beta"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_dpf"

# Harness that exercises the DPF SDK using the same surface as Carbide API.
# Used to validate provisioning flows against a real DPF operator without a full Carbide deployment.
[[bin]]
name = "carbide-dpf-api-harness"
path = "src/bin/api_harness.rs"
required-features = ["driver"]

[features]
default = []
driver = ["dep:clap", "dep:tracing-subscriber", "dep:libredfish"]

[dependencies]
kube = { default-features = false, features = [
  "runtime",
  "derive",
  "client",
  "rustls-tls",
], workspace = true }
rustls = { workspace = true }
k8s-openapi = { features = ["latest", "schemars"], workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
uuid = { features = ["v4"], workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
rand = { workspace = true }

carbide-uuid = { path = "../uuid", features = ["sqlx"] }

# Optional dependencies for carbide-dpf-api-harness binary
clap = { workspace = true, features = ["derive"], optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
libredfish = { workspace = true, optional = true }

[dev-dependencies]
dashmap = { workspace = true }
tower-test = { workspace = true }
hyper = { features = ["client", "http1"], workspace = true }
http = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
# requires this patch version for kopium. without this we have to specify a specific anyhow patch version in the main workspace.
anyhow = "1.0.102"
k8s-openapi = { workspace = true }
# Keep kopium scoped to this crate's build.rs to avoid workspace-wide pinning impact.
kopium = { git = "https://github.com/kube-rs/kopium", rev = "f2e69f0cbae446123ce11ac3a192d9940a56d434", default-features = false }
serde_yaml = { workspace = true }

[lints]
workspace = true
