[package]
name = "carbide-health"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
# TODO: rename to carbide-hw-health
name = "forge-hw-health"
path = "src/main.rs"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
figment = { workspace = true, features = ["toml", "env"] }
futures = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = [
  "env-filter",
  "local-time",
], workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
nv-redfish = { workspace = true }
nv-redfish-core = { workspace = true }
nv-redfish-bmc-http = { workspace = true }
rand = { workspace = true }
url = { workspace = true }

# [local-dependencies]
carbide-health-report = { path = "../health-report" }
carbide-rpc = { path = "../rpc" }
carbide-tls = { path = "../tls" }
carbide-version = { path = "../version" }
carbide-utils = { path = "../utils" }
carbide-uuid = { path = "../uuid" }
logfmt = { path = "../logfmt" }

[build-dependencies]
carbide-version = { path = "../version" }

[lints]
workspace = true
